# texpack

./: .gitignore  CMakeLists.txt  README.md  help.txt  makefile
src/: bleeding.cpp  bleeding.h  getopt.h  help.h  main.cpp  packer.cpp  packer.h  png.cpp  texpacker.h
src/json/: json.cpp
src/png/: png.cpp  png.h
src/rapidjson/: document.h  filereadstream.h  filestream.h  filewritestream.h  reader.h  stringbuffer.h  writer.h
src/rbp/: MaxRects.cpp  MaxRects.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h
src/sebclaeys_xml/: XMLWriter.hh  XMLWriter.hh.backup
test/: filelist  generate_images.sh  generate_images2.sh  metadata.json
